--- a/data/Backend/Frontend/index.html
+++ b/data/Backend/Frontend/index.html
@@ -1,53 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skin Disease Detection </title>
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Skin Disease Classifier</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
-<body class="bg-gradient-to-br from-pink-100 to-purple-200 min-h-screen flex items-center justify-center">
+<body class="bg-gradient-to-br from-blue-100 via-purple-100 to-pink-100 flex items-center justify-center min-h-screen">
 
-    <div class="bg-white shadow-lg rounded-2xl p-8 w-full max-w-lg">
-        <h1 class="text-3xl font-bold text-center text-pink-600 mb-6">Skin Disease Detector 🩺</h1>
-
-        <form id="uploadForm" enctype="multipart/form-data" class="space-y-4">
-            <label class="block text-gray-700 font-medium">Upload Skin Image</label>
-            <input type="file" name="image" id="image" accept="image/*" 
-                   class="block w-full text-sm text-gray-600 file:mr-4 file:py-2 file:px-4
-                          file:rounded-lg file:border-0
-                          file:text-sm file:font-semibold
-                          file:bg-pink-200 file:text-pink-800
-                          hover:file:bg-pink-300">
-
-            <button type="submit" class="w-full bg-pink-500 hover:bg-pink-600 text-white font-bold py-2 px-4 rounded-lg transition-colors">
-                Predict Disease
-            </button>
-        </form>
-
-        <div id="result" class="mt-6 text-center"></div>
+  <div class="bg-white rounded-2xl shadow-xl p-10 max-w-lg w-full text-center">
+    <h1 class="text-3xl font-bold text-purple-700 mb-6">🩺 Skin Disease Classifier</h1>
+    <p class="text-gray-600 mb-4">Upload a skin image to detect <strong>Acne</strong>, <strong>Eczema</strong>, or <strong>Ringworm</strong>.</p>
+    
+    <!-- Upload box -->
+    <label class="block w-full border-2 border-dashed border-purple-400 rounded-xl p-6 cursor-pointer bg-purple-50 hover:bg-purple-100 transition">
+      <input type="file" id="imageUpload" accept="image/*" class="hidden">
+      <span class="text-purple-600 font-medium">Click or drag an image here</span>
+    </label>
+    
+    <!-- Preview -->
+    <div id="preview" class="mt-4 hidden">
+      <img id="previewImage" class="rounded-lg shadow-md mx-auto w-48 h-48 object-cover">
     </div>
 
-    <script>
-        document.getElementById("uploadForm").addEventListener("submit", async (e) => {
-            e.preventDefault();
+    <!-- Predict button -->
+    <button id="predictBtn" class="mt-6 px-6 py-3 bg-purple-600 text-white rounded-xl shadow-lg hover:bg-purple-700 disabled:opacity-50 disabled:cursor-not-allowed" disabled>
+      Predict
+    </button>
 
-            const formData = new FormData();
-            const fileField = document.querySelector("input[type='file']");
+    <!-- Result -->
+    <div id="resultBox" class="mt-6 hidden p-4 bg-green-50 rounded-lg shadow">
+      <h2 class="text-lg font-semibold text-green-700">Prediction:</h2>
+      <p id="resultText" class="text-xl font-bold text-green-900"></p>
+    </div>
+  </div>
 
-            formData.append("image", fileField.files[0]);
+  <script>
+    const imageUpload = document.getElementById("imageUpload");
+    const preview = document.getElementById("preview");
+    const previewImage = document.getElementById("previewImage");
+    const predictBtn = document.getElementById("predictBtn");
+    const resultBox = document.getElementById("resultBox");
+    const resultText = document.getElementById("resultText");
 
-            const response = await fetch("/predict", {
-                method: "POST",
-                body: formData
-            });
+    let selectedFile = null;
 
-            const result = await response.json();
-            document.getElementById("result").innerHTML = `
-                <p class="text-xl font-bold text-pink-600">Prediction: ${result.prediction}</p>
-                <p class="text-gray-700">Confidence: ${(result.confidence * 100).toFixed(2)}%</p>
-            `;
+    // Show preview
+    imageUpload.addEventListener("change", (e) => {
+      const file = e.target.files[0];
+      if (file) {
+        selectedFile = file;
+        preview.classList.remove("hidden");
+        previewImage.src = URL.createObjectURL(file);
+        predictBtn.disabled = false;
+      }
+    });
+
+    // Predict button click
+    predictBtn.addEventListener("click", async () => {
+      if (!selectedFile) return;
+
+      const formData = new FormData();
+      formData.append("file", selectedFile);
+
+      resultText.innerText = "Analyzing...";
+      resultBox.classList.remove("hidden");
+
+      try {
+        const response = await axios.post("http://127.0.0.1:5000/predict", formData, {
+          headers: { "Content-Type": "multipart/form-data" }
         });
-    </script>
+
+        resultText.innerText = `${response.data.class} (Confidence: ${(response.data.confidence * 100).toFixed(2)}%)`;
+      } catch (error) {
+        console.error(error);
+        resultText.innerText = "Error analyzing image. Please try again.";
+      }
+    });
+  </script>
 </body>
 </html>
